# wd14_batch_tagger

./: LICENSE.txt  PUBLICATION_GUIDE.md  README.md  __init__.py  custom-node-list-entry.json  install.py  node_list.json  nodes.py  package.json  pyproject.toml
.github/workflows/: publish_action.yml
